--- a/workout.html
+++ b/workout.html
@@ -6,5 +6,12 @@
 	</head>
 	<body>
 		<h1 id="response"></h1>
+		<form role="form" id="workouts">
+			<div class="form-group">
+				<label for="workoutName">Name:</label>
+				<input type="text" name="workoutName" id="name">
+				<input type="submit" name="submit" id="add">
+			</div>
+		</form>
 	</body>
 </html>
