added heading to html and fixed GET call in front end js

--- a/workout.html
+++ b/workout.html
@@ -6,7 +6,8 @@
 		<script src="workoutFrontend.js"></script>
 	</head>
 	<body>
-		<h1 id="response"></h1>
+		<h1>Workout Tracker</h1>
+		<h3 id="response"></h3>
 		<form id="workouts">
 				<label for="workoutName">Name:</label>
 				<input type="text" name="workoutName" id="name">
