--- a/workout.html
+++ b/workout.html
@@ -10,7 +10,17 @@
 		<h3 id="response"></h3>
 		<form id="workouts">
 				<label for="workoutName">Name:</label>
-				<input type="text" name="workoutName" id="name">
+				<input type="text" name="workoutName" id="name"></br>
+				<label for="reps">Reps:</label>
+				<input type="number" name="reps" id="reps"></br>
+				<label for="weight">Weight:</label>
+				<input type="number" name="weight" id="weight"></br>
+				<label for="date">Date:</label>
+				<input type="date" name="date" id="date"></br>
+				<select name="lbs">
+					<option value="lbs">lbs</option>
+					<option value="kg">kg</option>
+				</select>
 				<input type="submit" value="submit" name="submit" id="add">
 		</form>
 	</body>
