--- a/workout.html
+++ b/workout.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.34.min.js"></script>
 		<script src="workoutFrontend.js"></script>
 	</head>
 	<body>
@@ -10,7 +9,7 @@
 		<h3 id="response"></h3>
 		<form id="workouts">
 				<label for="workoutName">Name:</label>
-				<input type="text" name="workoutName" id="name"></br>
+				<input type="text" name="name" id="name"></br>
 				<label for="reps">Reps:</label>
 				<input type="number" name="reps" id="reps"></br>
 				<label for="weight">Weight:</label>
