--- a/workout.html
+++ b/workout.html
@@ -8,7 +8,7 @@
 		<h1>Workout Tracker</h1>
 		<h3 id="response"></h3>
 		<form id="workouts">
-				<label for="workoutName">Name:</label>
+				<label for="name">Name:</label>
 				<input type="text" name="name" id="name"></br>
 				<label for="reps">Reps:</label>
 				<input type="number" name="reps" id="reps"></br>
@@ -22,5 +22,19 @@
 				</select>
 				<input type="submit" value="submit" name="submit" id="add">
 		</form>
+		<table>
+			<thead>
+				<tr>
+					<th colspan="6">Workout Log</th>
+				<tr>
+					<th>Name
+					<th>Reps
+					<th>Weight
+					<th>Date
+					<th>lbs/kg
+			</thead>
+			<tbody>
+			</tbody>
+		</table>
 	</body>
 </html>
