added css styling to table

--- a/workout.html
+++ b/workout.html
@@ -7,6 +7,7 @@ CS290 - Winter 2016-->
 	<head>
 		<meta charset="utf-8">
 		<script src="workoutFrontend.js"></script>
+		<link rel="stylesheet" type="text/css" href="workout.css">
 	</head>
 	<body>
 		<h1>Workout Tracker</h1>
