--- a/workout.html
+++ b/workout.html
@@ -25,7 +25,7 @@ CS290 - Winter 2016-->
 					<option value="lbs">lbs</option>
 					<option value="kg">kg</option>
 				</select>
-				<input type="submit" value="submit" name="submit" id="add">
+				<input type="submit" value="submit" name="submit" id="submit">
 		</form>
 		<table>
 			<thead>
