--- a/workout.html
+++ b/workout.html
@@ -12,7 +12,7 @@ CS290 - Winter 2016-->
 	<body>
 		<h1>Workout Tracker</h1>
 		<h3 id="response"></h3>
-		<form id="workouts">
+		<form role="form" id="workouts">
 				<label for="name">Name:</label>
 				<input type="text" name="name" id="name"></br>
 				<label for="reps">Reps:</label>
