--- a/workout.html
+++ b/workout.html
@@ -21,9 +21,9 @@ CS290 - Winter 2016-->
 				<input type="number" name="weight" id="weight"></br>
 				<label for="date">Date:</label>
 				<input type="date" name="date" id="date"></br>
-				<select name="lbs">
-					<option value="lbs">lbs</option>
-					<option value="kg">kg</option>
+				<select name="lbs" id="lbs">
+					<option value="1">lbs</option>
+					<option value="0">kg</option>
 				</select>
 				<input type="submit" value="submit" id="submit"></br>
 		</form>
