--- a/workout.html
+++ b/workout.html
@@ -6,41 +6,51 @@ CS290 - Winter 2016-->
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 		<script src="workoutFrontend.js"></script>
 		<link rel="stylesheet" type="text/css" href="workout.css">
 	</head>
 	<body>
-		<h1>Workout Tracker</h1>
-		<h3 id="response"></h3>
-		<form role="form" id="workouts">
-				<label for="name">Name:</label>
-				<input type="text" name="name" id="name"></br>
-				<label for="reps">Reps:</label>
-				<input type="number" name="reps" id="reps"></br>
-				<label for="weight">Weight:</label>
-				<input type="number" name="weight" id="weight"></br>
-				<label for="date">Date:</label>
-				<input type="date" name="date" id="date"></br>
-				<select name="lbs" id="lbs">
-					<option value="1">lbs</option>
-					<option value="0">kg</option>
-				</select>
-				<input type="submit" value="submit" id="submit"></br>
-		</form>
-		<table>
-			<thead>
-				<tr>
-					<th colspan="8">Workout Log</th>
-				<tr>
-					<th>Name
-					<th>Reps
-					<th>Weight
-					<th>Date
-					<th>lbs/kg
-					<th>
-			</thead>
-			<tbody id="tableBody">
-			</tbody>
-		</table>
+		<div class="row">
+			<h1>Workout Tracker</h1>
+			<div class="col-md-3">
+				<form role="form" id="workouts">
+					<label for="name">Name:</label>
+					<input type="text" name="name" id="name"></br>
+					<label for="reps">Reps:</label>
+					<input type="number" name="reps" id="reps"></br>
+					<label for="weight">Weight:</label>
+					<input type="number" name="weight" id="weight"></br>
+					<label for="date">Date:</label>
+					<input type="date" name="date" id="date"></br>
+					<select name="lbs" id="lbs">
+						<option value="1">lbs</option>
+						<option value="0">kg</option>
+					</select>
+					<input type="submit" value="submit" id="submit"></br>
+				</form>
+			</div>
+			<div class="col-md-9">
+				<table>
+					<thead>
+						<tr>
+							<th colspan="8">Workout Log</th>
+						<tr>
+							<th>Name
+							<th>Reps
+							<th>Weight
+							<th>Date
+							<th>lbs/kg
+						<th>
+					</thead>
+					<tbody id="tableBody">
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>	
 	</body>
 </html>
