minor changes to spacing in html

--- a/workout.html
+++ b/workout.html
@@ -14,7 +14,9 @@ CS290 - Winter 2016-->
 	</head>
 	<body>
 		<div class="row">
-			<h1>Workout Tracker</h1>
+			<div class="col-md-12">
+				<h1>Workout Tracker</h1>
+			</div>
 			<div class="col-md-3">
 				<form role="form" id="workouts">
 					<label for="name">Name:</label>
