--- a/workout.html
+++ b/workout.html
@@ -37,7 +37,7 @@ CS290 - Winter 2016-->
 				</form>
 			</div>
 			<div class="col-md-9">
-				<table>
+				<table class="table">
 					<thead>
 						<tr>
 							<th colspan="8">Workout Log</th>
