added spacing around delete buttons

--- a/workout.html
+++ b/workout.html
@@ -32,7 +32,7 @@ CS290 - Winter 2016-->
 							<option value="1">lbs</option>
 							<option value="0">kg</option>
 						</select>
-						<button type="submit" id="submit" class="btn btn-default">Submit</button></br>
+						<button type="submit" id="submit" class="btn btn-primary">Submit</button></br>
 					</div>
 				</form>
 			</div>
