added card styles to css

--- a/workout.html
+++ b/workout.html
@@ -17,7 +17,7 @@ CS290 - Winter 2016-->
 			<div class="col-md-12">
 				<h1>Workout Tracker</h1>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3" class="card-style">
 				<form role="form" id="workouts">
 					<div class="form-group">
 						<label for="name">Name:</label>
@@ -36,7 +36,7 @@ CS290 - Winter 2016-->
 					</div>
 				</form>
 			</div>
-			<div class="col-md-9">
+			<div class="col-md-9" class="card-style">
 				<table class="table">
 					<thead>
 						<tr>
