--- a/workout.html
+++ b/workout.html
@@ -18,6 +18,7 @@ CS290 - Winter 2016-->
 				<h1>Workout Tracker</h1>
 			</div>
 			<div class="col-md-3" id="card-form">
+				<div class="card-style">
 				<form role="form" id="workouts">
 					<div class="form-group">
 						<label for="name">Name:</label>
@@ -35,8 +36,10 @@ CS290 - Winter 2016-->
 						<button type="submit" id="submit" class="btn btn-primary">Submit</button></br>
 					</div>
 				</form>
+				</div>
 			</div>
 			<div class="col-md-9" id="card-table">
+				<div class="card-style">
 				<table class="table">
 					<thead>
 						<tr>
@@ -52,6 +55,7 @@ CS290 - Winter 2016-->
 					<tbody id="tableBody">
 					</tbody>
 				</table>
+				</div>
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
