troubleshoot table spacing

--- a/workout.html
+++ b/workout.html
@@ -17,7 +17,7 @@ CS290 - Winter 2016-->
 			<div class="col-md-12">
 				<h1>Workout Tracker</h1>
 			</div>
-			<div class="col-md-3" id="card-form">
+			<div class="col-md-3">
 				<div class="card-style">
 				<form role="form" id="workouts">
 					<div class="form-group">
@@ -38,7 +38,7 @@ CS290 - Winter 2016-->
 				</form>
 				</div>
 			</div>
-			<div class="col-md-9" id="card-table">
+			<div class="col-md-9">
 				<div class="card-style">
 				<table class="table">
 					<thead>
