added id to table for right padding

--- a/workout.html
+++ b/workout.html
@@ -39,7 +39,7 @@ CS290 - Winter 2016-->
 				</div>
 			</div>
 			<div class="col-md-9">
-				<div class="card-style">
+				<div class="card-style" id="table-container">
 				<table class="table">
 					<thead>
 						<tr>
