added header to form

--- a/workout.html
+++ b/workout.html
@@ -19,9 +19,9 @@ CS290 - Winter 2016-->
 			</div>
 			<div class="col-md-3">
 				<div class="card-style">
+					<h4>Enter Workout</h4>
 					<form role="form" id="workouts">
 						<div class="form-group">
-							<title>Enter Workout</title>
 							<label for="name">Name:</label>
 							<input type="text" name="name" id="name" class="form-control"></br>
 							<label for="reps">Reps:</label>
