--- a/workout.html
+++ b/workout.html
@@ -18,7 +18,7 @@ CS290 - Winter 2016-->
 				<h1>Workout Tracker</h1>
 			</div>
 			<div class="col-md-3">
-				<div class="card-style">
+				<div class="card-style" id="form-container">
 					<h4>Enter Workout</h4>
 					<form role="form" id="workouts">
 						<div class="form-group">
