added html for modal

--- a/workout.html
+++ b/workout.html
@@ -13,6 +13,13 @@ CS290 - Winter 2016-->
 		<link rel="stylesheet" type="text/css" href="workout.css">
 	</head>
 	<body>
+		<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  			<div class="modal-dialog modal-lg">
+    			<div class="modal-content">
+      				...
+    			</div>
+  			</div>
+		</div>
 		<div class="row">
 			<div class="col-md-12">
 				<h1>Workout Tracker</h1>
