added text content to modal

--- a/workout.html
+++ b/workout.html
@@ -16,7 +16,7 @@ CS290 - Winter 2016-->
 		<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
   			<div class="modal-dialog modal-lg">
     			<div class="modal-content">
-      				...
+      				Hi! I am a modal. I will soon be populated by a row from the table.
     			</div>
   			</div>
 		</div>
