--- a/workout.html
+++ b/workout.html
@@ -16,7 +16,17 @@ CS290 - Winter 2016-->
 		<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
   			<div class="modal-dialog modal-lg">
     			<div class="modal-content">
-      				Hi! I am a modal. I will soon be populated by a row from the table.
+    				<div class="modal-header">
+    					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        				<h4 class="modal-title">Modal title</h4>
+    				</div>
+    				<div class="modal-body">
+        				<p>Hi! I am a modal. I will soon be populated by a row from the table.</p>
+     				</div>
+     				<div class="modal-footer">
+        				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        				<button type="button" class="btn btn-primary">Save changes</button>
+      				</div>
     			</div>
   			</div>
 		</div>
