added form to modal

--- a/workout.html
+++ b/workout.html
@@ -22,6 +22,31 @@ CS290 - Winter 2016-->
     				</div>
     				<div class="modal-body">
         				<p>Hi! I am a modal. I will soon be populated by a row from the table.</p>
+        				<form class="form-inline">
+  							<div class="form-group">
+    							<label for="name">Name</label>
+    							<input type="text" class="form-control" id="exampleInputName2">
+  							</div>
+  							<div class="form-group">
+    							<label for="reps">Reps</label>
+    							<input type="number" class="form-control" id="exampleInputEmail2">
+  							</div>
+  							<div class="form-group">
+  								<label for="weight">Weight</label>
+  								<input type="number" class="form-control">
+  							</div>
+  							<div class="form-group">
+  								<label for="weight">Weight</label>
+  								<input type="date" class="form-control">
+  							</div>
+  							<div class="form-group">
+  								<select name="lbs" id="lbs" class="form-control">
+  									<option value="1">lbs</option>
+  									<option value="0">kg</option>
+  								</select>
+  							</div>
+  							<button type="submit" class="btn btn-default">Send invitation</button>
+						</form>
      				</div>
      				<div class="modal-footer">
         				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
