--- a/workout.html
+++ b/workout.html
@@ -36,7 +36,7 @@ CS290 - Winter 2016-->
   								<input type="number" class="form-control">
   							</div>
   							<div class="form-group">
-  								<label for="weight">Weight</label>
+  								<label for="weight">Date</label>
   								<input type="date" class="form-control">
   							</div>
   							<div class="form-group">
