added event listener to edit buttons

--- a/workout.html
+++ b/workout.html
@@ -25,19 +25,19 @@ CS290 - Winter 2016-->
         				<form class="form-inline">
   							<div class="form-group">
     							<label for="name">Name</label>
-    							<input type="text" class="form-control" id="exampleInputName2">
+    							<input type="text" class="form-control" id="name-modal">
   							</div>
   							<div class="form-group">
     							<label for="reps">Reps</label>
-    							<input type="number" class="form-control" id="exampleInputEmail2">
+    							<input type="number" class="form-control" id="reps-modal">
   							</div>
   							<div class="form-group">
   								<label for="weight">Weight</label>
-  								<input type="number" class="form-control">
+  								<input type="number" class="form-control" id="weight-modal">
   							</div>
   							<div class="form-group">
   								<label for="weight">Date</label>
-  								<input type="date" class="form-control">
+  								<input type="date" class="form-control" id="date-modal">
   							</div>
   							<div class="form-group">
   								<select name="lbs" id="lbs" class="form-control">
