added function for update and event listener to call from modal

--- a/workout.html
+++ b/workout.html
@@ -1,6 +1,5 @@
 <!--Workout Tracker
-Adam Smith
-CS290 - Winter 2016-->
+Adam Smith-->
 
 <!DOCTYPE html>
 <html>
@@ -39,7 +38,7 @@ CS290 - Winter 2016-->
   								<input type="date" class="form-control" id="date-modal">
   							</div>
   							<div class="form-group">
-  								<select name="lbs" id="lbs" class="form-control">
+  								<select name="lbs" id="lbs-modal" class="form-control">
   									<option value="1">lbs</option>
   									<option value="0">kg</option>
   								</select>
@@ -48,7 +47,7 @@ CS290 - Winter 2016-->
      				</div>
      				<div class="modal-footer">
         				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        				<button type="button" class="btn btn-primary">Save changes</button>
+        				<button type="button" class="btn btn-primary" id="submit-modal">Save changes</button>
       				</div>
     			</div>
   			</div>
