--- a/workout.html
+++ b/workout.html
@@ -21,6 +21,9 @@ Adam Smith-->
     				</div>
     				<div class="modal-body">
         				<form class="form-inline">
+        					<div class="form-group">
+        						<input type="hidden" class="form-control" id="id-modal">
+        					</div>
   							<div class="form-group">
     							<label for="name">Name</label>
     							<input type="text" class="form-control" id="name-modal">
