--- a/workout.html
+++ b/workout.html
@@ -50,7 +50,7 @@ Adam Smith-->
      				</div>
      				<div class="modal-footer">
         				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        				<button type="button" class="btn btn-primary" data-dismoss="modal" id="submit-modal">Save changes</button>
+        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-modal">Save changes</button>
       				</div>
     			</div>
   			</div>
