--- a/workout.html
+++ b/workout.html
@@ -46,6 +46,8 @@ Adam Smith-->
   									<option value="0">kg</option>
   								</select>
   							</div>
+  							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        					<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-modal">Save changes</button>
 						</form>
      				</div>
      				<div class="modal-footer">
