--- a/workout.html
+++ b/workout.html
@@ -59,7 +59,7 @@ Adam Smith-->
 			<div class="col-md-12">
 				<h1>Workout Tracker</h1>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3" id="left-sidebar">
 				<div class="card-style" id="form-container">
 					<h4>Enter Workout</h4>
 					<form role="form" id="workouts">
