added container class to body

--- a/workout.html
+++ b/workout.html
@@ -55,6 +55,7 @@ Adam Smith-->
     			</div>
   			</div>
 		</div>
+		<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<h1>Workout Tracker</h1>
@@ -102,6 +103,7 @@ Adam Smith-->
 					</table>
 				</div>
 			</div>
+		</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>	
