--- a/workout.html
+++ b/workout.html
@@ -55,7 +55,7 @@ Adam Smith-->
     			</div>
   			</div>
 		</div>
-		<div class="container">
+		<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
 				<h1>Workout Tracker</h1>
