added classes to html

--- a/workout.html
+++ b/workout.html
@@ -57,10 +57,10 @@ Adam Smith-->
 		</div>
 		<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-12 col-xs-12">
 				<h1>Workout Tracker</h1>
 			</div>
-			<div class="col-md-3" id="left-sidebar">
+			<div class="col-md-3 col-xs-12" id="left-sidebar">
 				<div class="card-style" id="form-container">
 					<h4>Enter Workout</h4>
 					<form role="form" id="workouts">
@@ -82,7 +82,7 @@ Adam Smith-->
 					</form>
 				</div>
 			</div>
-			<div class="col-md-9">
+			<div class="col-md-9 col-xs-12">
 				<div class="card-style" id="table-container">
 					<table class="table">
 						<thead>
