--- a/workout.html
+++ b/workout.html
@@ -12,7 +12,7 @@ Adam Smith-->
 		<link rel="stylesheet" type="text/css" href="workout.css">
 	</head>
 	<body>
-		<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+		<div class="modal fade bs-example-modal-lg" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
   			<div class="modal-dialog modal-lg">
     			<div class="modal-content">
     				<div class="modal-header">
