--- a/workout.html
+++ b/workout.html
@@ -15,7 +15,7 @@ Adam Smith-->
 	<body>
 		<!--<div class="modal fade bs-example-modal-lg" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">-->
 		<div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-  			<div class="modal-dialog modal-lg">
+  			<div class="modal-dialog">
     			<div class="modal-content">
     				<div class="modal-header">
     					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
