--- a/workout.html
+++ b/workout.html
@@ -108,6 +108,6 @@ Adam Smith-->
 		</div>
 		</div>
 		<!---<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>-->
-  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>	
+  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>	
 	</body>
 </html>
