--- a/workout.html
+++ b/workout.html
@@ -14,7 +14,7 @@ Adam Smith-->
 	</head>
 	<body>
 		<!--<div class="modal fade bs-example-modal-lg" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">-->
-		<div class="modal" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+		<div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
   			<div class="modal-dialog">
     			<div class="modal-content">
     				<div class="modal-header">
