fixed some errors in workoutLogIn.html

--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -15,17 +15,19 @@
 					<h1>Workout Tracker</h1>
 				</div>
 				<div class="col-md-6 col-xs-12">
-					<h4>User Login</h4>
-					<form role="form" id="workouts">
-						<div class="form-group">
-							<label for="username">Username:</label>
-							<input type="text" name="username" id="username" class="form-control"></br>
-							<label for="password">Password:</label>
-							<input type="password" name="password" id="password" class="form-control">
-							</br>
-							<button type="submit" id="submit" class="btn btn-primary">Log In</button>
-						</div>
-					</form>
+					<div class="card-style" id="form-container">
+						<h4>User Login</h4>
+						<form role="form" id="workouts">
+							<div class="form-group">
+								<label for="username">Username:</label>
+								<input type="text" name="username" id="username" class="form-control"></br>
+								<label for="password">Password:</label>
+								<input type="password" name="password" id="password" class="form-control">
+								</br>
+								<button type="submit" id="submit" class="btn btn-primary">Log In</button>
+							</div>
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
