--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -16,7 +16,7 @@
 				</div>
 				<div class="col-md-6 col-xs-12">
 					<div class="card-style" id="form-container">
-						<h4>User Login</h4>
+						<h4 id="user_login">User Login</h4>
 						<form role="form" id="workouts">
 							<div class="form-group">
 								<label for="username">Username:</label>
@@ -31,5 +31,6 @@
 				</div>
 			</div>
 		</div>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>	
 	</body>
 </html>
