--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -14,6 +14,8 @@
 				<div class="col-md-12 col-xs-12">
 					<h1>Workout Tracker</h1>
 				</div>
+				<div class="col-md-3">
+				</div>
 				<div class="col-md-6 col-xs-12">
 					<div class="card-style" id="form-container">
 						<h4 id="user_login">User Login</h4>
@@ -28,6 +30,8 @@
 							</div>
 						</form>
 					</div>
+				</div>
+				<div class="col-md-3">
 				</div>
 			</div>
 		</div>
