aligning login button

--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -26,7 +26,7 @@
 								<label for="password">Password:</label>
 								<input type="password" name="password" id="password" class="form-control">
 								</br>
-								<button type="submit" id="submit" class="btn btn-primary">Log In</button>
+								<button type="submit" id="submit" id="login_button" class="btn btn-primary">Log In</button>
 							</div>
 						</form>
 					</div>
