--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -17,7 +17,7 @@
 				<div class="col-md-3">
 				</div>
 				<div class="col-md-6 col-xs-12">
-					<div class="card-style" id="form-container" id="login_box">
+					<div class="card-style" id="form-container">
 						<h4 id="user_login">User Login</h4>
 						<form role="form" id="workouts">
 							<div class="form-group">
@@ -26,7 +26,7 @@
 								<label for="password">Password:</label>
 								<input type="password" name="password" id="password" class="form-control">
 								</br>
-								<button type="submit" id="submit" id="login_button" class="btn btn-primary">Log In</button>
+								<button type="submit" id="submit" class="btn btn-primary center-block">Log In</button>
 							</div>
 						</form>
 					</div>
