--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -17,7 +17,7 @@
 				<div class="col-md-3">
 				</div>
 				<div class="col-md-6 col-xs-12">
-					<div class="card-style" id="form-container">
+					<div class="card-style" id="login-box">
 						<h4 id="user_login">User Login</h4>
 						<form role="form" id="workouts">
 							<div class="form-group">
