--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -10,6 +10,40 @@
 			<meta name="theme-color" content="#FFEB3B">
 	</head>
 	<body>
+		<div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  			<div class="modal-dialog">
+    			<div class="modal-content">
+    				<div class="modal-header">
+    					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        				<h4 class="modal-title">Edit Entry</h4>
+    				</div>
+    				<div class="modal-body">
+        				<form class="form-inline">
+  							<div class="form-group">
+    							<label for="first_name">First Name:</label>
+    							<input type="text" class="form-control" id="first_name-modal">
+  							</div>
+  							<div class="form-group">
+    							<label for="last_name">Last Name</label>
+    							<input type="text" class="form-control" id="last_name-modal">
+  							</div>
+  							<div class="form-group">
+  								<label for="user_name">Email (will be your username)</label>
+  								<input type="text" class="form-control" id="user_name-modal">
+  							</div>
+  							<div class="form-group">
+  								<label for="password">Password</label>
+  								<input type="password" class="form-control" id="password-modal">
+  							</div>
+						</form>
+     				</div>
+     				<div class="modal-footer">
+        				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-modal">Create User</button>
+      				</div>
+    			</div>
+  			</div>
+		</div>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 col-xs-12">
