--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -10,12 +10,12 @@
 			<meta name="theme-color" content="#FFEB3B">
 	</head>
 	<body>
-		<div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+		<div class="modal fade" id="new-user" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
   			<div class="modal-dialog">
     			<div class="modal-content">
     				<div class="modal-header">
     					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        				<h4 class="modal-title">Edit Entry</h4>
+        				<h4 class="modal-title">Create User</h4>
     				</div>
     				<div class="modal-body">
         				<form class="form-inline">
@@ -62,6 +62,7 @@
 								<input type="password" name="password" id="password" class="form-control">
 								</br>
 								<button type="submit" id="submit" class="btn btn-primary center-block">Log In</button>
+								<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#new-user">Create New User</button>
 							</div>
 						</form>
 					</div>
