cleaned up form in modal

--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -21,19 +21,19 @@
         				<form class="form-inline">
   							<div class="form-group">
     							<label for="first_name">First Name:</label>
-    							<input type="text" class="form-control" id="first_name-modal">
+    							<input type="text" class="form-control" id="first_name-modal"></br>
   							</div>
   							<div class="form-group">
     							<label for="last_name">Last Name</label>
-    							<input type="text" class="form-control" id="last_name-modal">
+    							<input type="text" class="form-control" id="last_name-modal"></br>
   							</div>
   							<div class="form-group">
   								<label for="user_name">Email (will be your username)</label>
-  								<input type="text" class="form-control" id="user_name-modal">
+  								<input type="text" class="form-control" id="user_name-modal"></br>
   							</div>
   							<div class="form-group">
   								<label for="password">Password</label>
-  								<input type="password" class="form-control" id="password-modal">
+  								<input type="password" class="form-control" id="password-modal"></br>
   							</div>
 						</form>
      				</div>
