--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -18,15 +18,15 @@
         				<h4 class="modal-title">Create User</h4>
     				</div>
     				<div class="modal-body">
-        				<form class="form-inline">
+        				<form role="form">
   							<div class="form-group">
     							<label for="first_name">First Name:</label>
     							<input type="text" class="form-control" id="first_name-modal"></br>
-    							<label for="last_name">Last Name</label>
+    							<label for="last_name">Last Name:</label>
     							<input type="text" class="form-control" id="last_name-modal"></br>
-  								<label for="user_name">Email (will be your username)</label>
+  								<label for="user_name">Email (will be your username):</label>
   								<input type="text" class="form-control" id="user_name-modal"></br>
-  								<label for="password">Password</label>
+  								<label for="password">Password:</label>
   								<input type="password" class="form-control" id="password-modal"></br>
   							</div>
 						</form>
