--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -55,7 +55,7 @@
 								<label for="password">Password:</label>
 								<input type="password" name="password" id="password" class="form-control">
 								</br>
-								<button type="submit" id="submit" class="btn btn-primary center-block">Log In</button>
+								<button type="submit" id="login" class="btn btn-primary center-block">Log In</button>
 								<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#new-user">Create New User</button>
 							</div>
 						</form>
