--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -57,7 +57,7 @@
 								<input type="password" name="password" id="password" class="form-control">
 								</br>
 								<!--<button type="submit" id="login" class="btn btn-primary center-block">Log In</button>-->
-								<a href="http://52.33.123.66:2000/workout.html" class="btn btn-primary" data-dismiss="modal">Log In</a>
+								<a href="http://52.33.123.66:2000/workout.html" type="submit" id="login"class="btn btn-primary">Log In</a>
 								<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#new-user">Create New User</button>
 							</div>
 						</form>
