--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -14,7 +14,13 @@
 			<div class="row">
 				<div class="col-md-12 col-xs-12">
 					<h1>Workout Tracker</h1>
-					<a href="http://52.33.123.66:2000/workoutLogIn.html">Log Out</a>
+				</div>
+				<div class="col-md-12 col-xs-12">
+					<div class="card-style">
+						<h3>Welcome</h3>
+						<h2></h2>
+						<button type="button" class="btn btn-link">Log Out</button>
+					</div>
 				</div>
 			</div>
 		</div>
