--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -6,7 +6,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-		<script src="workoutFrontend.js"></script>
+		<!--<script src="workoutFrontend.js"></script>-->
 		<link rel="stylesheet" type="text/css" href="workout.css">
 	</head>
 	<body>
