tell bootstrap to display block

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -15,7 +15,7 @@
 				<div class="col-md-12 col-xs-12">
 					<h1>Workout Tracker</h1>
 				</div>
-				<div class="col-md-12 col-xs-12">
+				<div class="col-md-12 col-xs-12" id="welcome">
 					<div class="card-style">
 						<h3>Welcome</h3>
 						<h2></h2>
