--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -15,6 +15,8 @@
 				<div class="col-md-12 col-xs-12">
 					<h1>Workout Tracker</h1>
 				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-12 col-xs-12" id="welcome">
 					<div class="card-style">
 						<h3>Welcome</h3>
