--- a/public/workoutLogIn.html
+++ b/public/workoutLogIn.html
@@ -41,7 +41,7 @@
 		</div>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-12 col-xs-12">
+				<div class="col-md-12 col-xs-12" id="title-bar">
 					<h1>Workout Tracker</h1>
 				</div>
 				<div class="col-md-3">
