--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -12,12 +12,12 @@
 	<body>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-12 col-xs-12">
+				<div class="col-md-12 col-xs-12" id="title-bar">
 					<h1>Workout Tracker</h1>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-12 col-xs-12" id="welcome">
+				<div class="col-md-12 col-xs-12">
 					<div class="card-style">
 						<h3>Welcome</h3>
 						<h2></h2>
