--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -31,7 +31,8 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th colspan="12">Users</th>
+									<th colspan="11">Users</th>
+									<button type="button" class="btn btn-link">+ Add User</button>
 								</tr>
 								<tr>
 									<th>First Name
