--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -32,7 +32,9 @@
 							<thead>
 								<tr>
 									<th colspan="11">Users</th>
-									<button type="button" class="btn btn-link">+ Add User</button>
+									<th colspan="1">
+										<button type="button" class="btn btn-link">+ Add User</button>
+									</th>
 								</tr>
 								<tr>
 									<th>First Name
