playing with add user button

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -31,7 +31,10 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th colspan="12">Users</th>
+									<th>Users</th>
+									<th>
+										<button type="button" class="btn btn-link">+ Add User</button>
+									</th>
 								</tr>
 								<tr>
 									<th>First Name
