new button placement

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -31,8 +31,8 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th>Users</th>
-									<th>
+									<th colspan="11">Users</th>
+									<th colspan="1">
 										<button type="button" class="btn btn-link">+ Add User</button>
 									</th>
 								</tr>
