play with colspan

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -30,9 +30,9 @@
 					<div class="card-style" id="table-container">
 						<table class="table">
 							<thead>
-								<tr>
-									<th colspan="11">Users</th>
-									<th colspan="1">
+								<tr colspan="12">
+									<th>Users</th>
+									<th>
 										<button type="button" class="btn btn-link">+ Add User</button>
 									</th>
 								</tr>
