--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -33,7 +33,7 @@
 								<tr colspan="12">
 									<th>Users</th>
 									<th>
-										<button type="button" class="btn btn-link">+ Add User</button>
+										<button type="button" class="btn btn-link" id="addUser">+ Add User</button>
 									</th>
 								</tr>
 								<tr>
