--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -30,9 +30,9 @@
 					<div class="card-style" id="table-container">
 						<table class="table">
 							<thead>
-								<tr colspan="12">
+								<tr>
 									<th>Users</th>
-									<th>
+									<th colspan="0">
 										<button type="button" class="btn btn-link" id="addUser">+ Add User</button>
 									</th>
 								</tr>
