--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -31,7 +31,7 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th>Users</th>
+									<th colspan="12">Users</th>
 									<th colspan="0">
 										<button type="button" class="btn btn-link" id="addUser">+ Add User</button>
 									</th>
