--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -49,6 +49,22 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-12 col-xs-12">
+					<div class="card-style" id="table-container">
+						<table class="table">
+							<thead>
+								<tr>
+									<th colspan="4">Workouts</th>
+								</tr>
+								<tr>
+									<th>Name
+								</tr>
+							</thead>
+						</table>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!---<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>-->
   		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>	
