added all tables

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -50,17 +50,53 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-12 col-xs-12">
+				<div class="col-md-4 col-xs-12">
 					<div class="card-style" id="table-container">
 						<table class="table">
 							<thead>
 								<tr>
-									<th colspan="4">Workouts</th>
+									<th>Workouts</th>
 								</tr>
 								<tr>
 									<th>Name
 								</tr>
 							</thead>
+							<tbody id="workouts_table_body">
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<div class="col-md-4 col-xs-12">
+					<div class="card-style" id="table-container">
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Exercises</th>
+								</tr>
+								<tr>
+									<th>Exercise Name</th>
+								</tr>
+							</thead>
+							<tbody id="exercises_table_body">
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<div class="col-md-4 col-xs-12">
+					<div class="card-style" id="table-container">
+						<table class="table">
+							<thead>
+								<tr>
+									<th colspan="3">Sets</th>
+								</tr>
+								<tr>
+									<th>Reps</th>
+									<th>Weight</th>
+									<th>Date</th>
+								</tr>
+							</thead>
+							<tbody id="sets_table_body">
+							</tbody>
 						</table>
 					</div>
 				</div>
