--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -33,7 +33,7 @@
 								<tr>
 									<th colspan="3">Users</th>
 									<th colspan="1">
-										<button type="button" class="btn btn-link" id="addUser">+ Add User</button>
+										<button type="button" class="btn btn-link" id="addButton">+ Add User</button>
 									</th>
 								</tr>
 								<tr>
@@ -56,6 +56,9 @@
 							<thead>
 								<tr>
 									<th>Workouts</th>
+									<th>
+										<button type="button" class="btn btn-link" id="addButton">+ Add Workout</button>
+									</th>
 								</tr>
 								<tr>
 									<th>Name
@@ -72,6 +75,9 @@
 							<thead>
 								<tr>
 									<th>Exercises</th>
+									<th>
+										<button type="button" class="btn btn-link" id="addButton">+ Add Exercise</button>
+									</th>
 								</tr>
 								<tr>
 									<th>Exercise Name</th>
@@ -87,7 +93,10 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th colspan="3">Sets</th>
+									<th colspan="2">Sets</th>
+									<th colspan="1">
+										<button type="button" class="btn btn-link" id="addButton">+ Add Set</button>
+									</th>
 								</tr>
 								<tr>
 									<th>Reps</th>
