adjustments to buttons

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -56,7 +56,7 @@
 							<thead>
 								<tr>
 									<th>Workouts</th>
-									<th>
+									<th colspan="0">
 										<button type="button" class="btn btn-link" id="addButton">+ Add Workout</button>
 									</th>
 								</tr>
@@ -75,7 +75,7 @@
 							<thead>
 								<tr>
 									<th>Exercises</th>
-									<th>
+									<th colspan="0">
 										<button type="button" class="btn btn-link" id="addButton">+ Add Exercise</button>
 									</th>
 								</tr>
