maybe fixed columns

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -55,13 +55,14 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th>Workouts</th>
-									<th colspan="0">
+									<th colspan="1">Workouts</th>
+									<th colspan="1">
 										<button type="button" class="btn btn-link" id="addButton">+ Add Workout</button>
 									</th>
 								</tr>
 								<tr>
-									<th>Name
+									<th>Name</th>
+									<th></th>
 								</tr>
 							</thead>
 							<tbody id="workouts_table_body">
@@ -74,13 +75,14 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th>Exercises</th>
-									<th colspan="0">
+									<th colspan="1">Exercises</th>
+									<th colspan="1">
 										<button type="button" class="btn btn-link" id="addButton">+ Add Exercise</button>
 									</th>
 								</tr>
 								<tr>
 									<th>Exercise Name</th>
+									<th></th>
 								</tr>
 							</thead>
 							<tbody id="exercises_table_body">
