--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -10,6 +10,34 @@
 		<link rel="stylesheet" type="text/css" href="workout.css">
 	</head>
 	<body>
+		<div class="modal fade" id="new-user" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  			<div class="modal-dialog">
+    			<div class="modal-content">
+    				<div class="modal-header">
+    					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        				<h4 class="modal-title">Create User</h4>
+    				</div>
+    				<div class="modal-body">
+        				<form role="form">
+  							<div class="form-group">
+    							<label for="first_name">First Name:</label>
+    							<input type="text" class="form-control" id="first_name-modal"></br>
+    							<label for="last_name">Last Name:</label>
+    							<input type="text" class="form-control" id="last_name-modal"></br>
+  								<label for="user_name">Email (will be your username):</label>
+  								<input type="text" class="form-control" id="user_name-modal"></br>
+  								<label for="password">Password:</label>
+  								<input type="password" class="form-control" id="password-modal"></br>
+  							</div>
+						</form>
+     				</div>
+     				<div class="modal-footer">
+        				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-modal">Create User</button>
+      				</div>
+    			</div>
+  			</div>
+		</div>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 col-xs-12" id="title-bar">
@@ -33,7 +61,7 @@
 								<tr>
 									<th colspan="3">Users</th>
 									<th colspan="1">
-										<button type="button" class="btn btn-link" id="addButton">+ Add User</button>
+										<button type="button" class="btn btn-link" data-toggle="modal" data-target="#new-user" id="addButton">+ Add User</button>
 									</th>
 								</tr>
 								<tr>
