--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -80,11 +80,11 @@
 			<div class="row">
 				<div class="col-md-12 col-xs-12">
 					<div class="card-style" id="table-container">
-						<form role="form">
+						<form role="form" class="form-inline">
 							<div class="form-group">
 								<label for="search">Search Exercises</label>
 								<input type="text" name="search" id="search" class="form-control">
-								<button type="submit" id="search-button" class="btn btn-primary btn-sm">Search</button>
+								<button type="submit" id="search-button" class="btn btn-info btn-sm">Search</button>
 							</div>
 						</form>
 					</div>
