--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -38,6 +38,28 @@
     			</div>
   			</div>
 		</div>
+		<div class="modal fade" id="new-workout" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+			<div class="modal-dialog">
+    			<div class="modal-content">
+    				<div class="modal-header">
+    					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        				<h4 class="modal-title">Create Workout</h4>
+    				</div>
+    				<div class="modal-body">
+        				<form role="form">
+  							<div class="form-group">
+    							<label for="workout_name">Workout Name:</label>
+    							<input type="text" class="form-control" id="workout_name-modal"></br>
+  							</div>
+						</form>
+     				</div>
+     				<div class="modal-footer">
+        				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-workout-modal">Create Workout</button>
+      				</div>
+    			</div>
+  			</div>
+		</div>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 col-xs-12" id="title-bar">
