data target for workout modal

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -120,7 +120,7 @@
 								<tr>
 									<th colspan="1">Workouts</th>
 									<th colspan="1">
-										<button type="button" class="btn btn-link" id="addButton">+ Add Workout</button>
+										<button type="button" class="btn btn-link" data-toggle="modal" data-target="#new-workout" id="addButton">+ Add Workout</button>
 									</th>
 								</tr>
 								<tr>
