text and text decoration

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -155,6 +155,7 @@
 								<label for="search">Search Exercises</label>
 								<input type="text" name="search" id="search" class="form-control">
 								<button type="submit" id="search-button" class="btn btn-info btn-sm">Search</button>
+								<p>Search all exercises for the selected user</p>
 							</div>
 						</form>
 					</div>
