cleaned up get sets route and order by date descending

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -103,7 +103,7 @@
      				</div>
      				<div class="modal-footer">
         				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-set-modal">Create Exercise</button>
+        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-set-modal">Add Set</button>
       				</div>
     			</div>
   			</div>
