--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -156,6 +156,7 @@
 								<input type="text" name="search" id="search" class="form-control">
 								<button type="submit" id="search-button" class="btn btn-info btn-sm">Search</button>
 								<p>Search all exercises for the selected user</p>
+								<p id="error-message"></p>
 							</div>
 						</form>
 					</div>
