--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -108,6 +108,23 @@
     			</div>
   			</div>
 		</div>
+		<div class="modal fade" id="delete-workout" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+			<div class="modal-dialog">
+    			<div class="modal-content">
+    				<div class="modal-header">
+    					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        				<h4 class="modal-title">Create Exercise</h4>
+    				</div>
+    				<div class="modal-body">
+        				<h3>Are you sure you want to delete this workout?</h3>
+     				</div>
+     				<div class="modal-footer">
+        				<button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-exercise-modal">Yes</button>
+      				</div>
+    			</div>
+  			</div>
+		</div>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 col-xs-12" id="title-bar">
