testing delete workout

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -120,7 +120,7 @@
      				</div>
      				<div class="modal-footer">
         				<button type="button" class="btn btn-default" data-dismiss="modal">No</button>
-        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-exercise-modal">Yes</button>
+        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="delete-workout-modal">Yes</button>
       				</div>
     			</div>
   			</div>
