testing error message in modal

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -45,7 +45,7 @@
     					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         				<h4 class="modal-title">Create Workout</h4>
     				</div>
-    				<div class="modal-body">
+    				<div class="modal-body" id="workout-body">
         				<form role="form">
   							<div class="form-group">
     							<label for="workout_name">Workout Name:</label>
