--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -67,7 +67,7 @@
     					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         				<h4 class="modal-title">Create Exercise</h4>
     				</div>
-    				<div class="modal-body">
+    				<div class="modal-body" id="exercise-body">
         				<form role="form">
   							<div class="form-group">
     							<label for="exercise_name">Exercise Name:</label>
