testing disabled buttons in bootstrap modal

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -89,7 +89,7 @@
     					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         				<h4 class="modal-title">Create Exercise</h4>
     				</div>
-    				<div class="modal-body">
+    				<div class="modal-body" id="set-body">
         				<form role="form">
   							<div class="form-group">
     							<label for="reps">Reps:</label>
