--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -55,7 +55,7 @@
      				</div>
      				<div class="modal-footer">
         				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-workout-modal" disabled>Create Workout</button>
+        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-workout-modal">Create Workout</button>
       				</div>
     			</div>
   			</div>
