bold font for set numbers

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -248,7 +248,7 @@
 									</th>
 								</tr>
 								<tr>
-									<th>#</th>
+									<th class="boldFont">#</th>
 									<th>Reps</th>
 									<th>Weight</th>
 									<th>Date</th>
