testing css tricks

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -248,13 +248,13 @@
 									</th>
 								</tr>
 								<tr>
-									<th class="boldFont">#</th>
+									<th>#</th>
 									<th>Reps</th>
 									<th>Weight</th>
 									<th>Date</th>
 								</tr>
 							</thead>
-							<tbody id="sets_table_body">
+							<tbody class="sets-table" id="sets_table_body">
 							</tbody>
 						</table>
 					</div>
