--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -160,7 +160,7 @@
 			<div class="row">
 				<div class="col-md-12 col-xs-12">
 					<div class="card-style" id="table-container">
-						<table class="table table-hover">
+						<table class="table">
 							<thead>
 								<tr>
 									<th colspan="3">Users</th>
