testing search box with bootstrap grid

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -186,11 +186,17 @@
 					<div class="card-style" id="table-container">
 						<form role="form" class="form-inline">
 							<div class="form-group" id="searchDiv">
-								<label for="search">Search Exercises</label>
-								<input type="text" name="search" id="search" class="form-control">
-								<button type="submit" id="search-button" class="btn btn-info btn-sm">Search</button>
-								<p>Search all exercises for the selected user</p>
-								<p id="error-message"></p>
+								<div class="row">
+									<div class"col-md-6 col-xs-12">
+										<label for="search">Search Exercises</label>
+										<input type="text" name="search" id="search" class="form-control">
+										<button type="submit" id="search-button" class="btn btn-info btn-sm">Search</button>
+										<p>Search all exercises for the selected user</p>
+									</div>
+									<div class="col-md-6 col-xs-12">
+										<p id="error-message"></p>
+									</div>
+								</div>
 							</div>
 						</form>
 					</div>
