--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -190,7 +190,7 @@
 								<input type="text" name="search" id="search" class="form-control">
 								<button type="submit" id="search-button" class="btn btn-info btn-sm">Search</button>
 								<p>Search all exercises for the selected user</p>
-								<span class="text-help" id="error-message"></span>
+								<p class="text-help" id="error-message"></p>
 							</div>
 						</form>
 					</div>
