fixed error text in search box

--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -185,7 +185,7 @@
 				<div class="col-md-12 col-xs-12">
 					<div class="card-style" id="table-container">
 						<div class="row">
-							<div class="col-md-9">
+							<div class="col-md-9 col-xs-12">
 								<form role="form" class="form-inline">
 									<div class="form-group" id="searchDiv">
 										<label for="search">Search Exercises</label>
@@ -196,7 +196,7 @@
 									</div>
 								</form>
 							</div>
-							<div class="col-md-3">
+							<div class="col-md-3 col-xs-12">
 								<p id="error-message"></p>
 							</div>
 						</div>
