--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -33,7 +33,7 @@
      				</div>
      				<div class="modal-footer">
         				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        				<button type="submit" class="btn btn-primary" data-dismiss="modal" id="submit-modal">Create User</button>
+        				<button type="submit" class="btn btn-primary" id="submit-modal">Create User</button>
       				</div>
     			</div>
   			</div>
